# api/swagger.yml
@@ -15,6 +15,15 @@ produces:
   - text/html
   - text/plain
 paths:
+  /comments:
+    post:
+      summary: Create a new comment
+      parameters:
+        - name: comment
+          in: body
+          schema: {$ref: '#/definitions/Comment'}
+      responses:
+        200: {$ref: '#/responses/ok'}
   /meta:
     get:
       summary: Get list of meta items
@@ -132,8 +141,17 @@ definitions:
       - menu
       - active
     properties:
-      _id: {type: string}
+      _id:
+        type: string
+        enum:
+          - home
+          - content
+          - download
+          - author
+          - contact
+          - impressum
       title: {type: string}
+      icon: {type: string}
       position: {type: integer}
       menu: {type: string}
       active: {type: boolean}
@@ -178,8 +196,78 @@ definitions:
       _id: {$ref: '#/definitions/ObjectId'}
       title: {type: string}
       subtitle: {type: string}
-      description: {type: string}
       position: {type: integer}
+      description: {type: string}
+      requires:
+        type: array
+        items: {$ref: '#/definitions/ObjectId'}
+      topics:
+        type: array
+        items: {$ref: '#/definitions/Topic'}
+      views:
+        type: array
+        items: {$ref: '#/definitions/ObjectId'}
+      akzeptanz:
+        type: object
+        required:
+          - comments
+          - akzeptanz
+        properties:
+          comments:
+            type: array
+            items: {$ref: '#/definitions/ObjectId'}
+          ratings:
+            type: array
+            items: {$ref: '#/definitions/ObjectId'}
+  Topic:
+    type: object
+    required:
+      - _id
+      - title
+      - body
+    properties:
+      _id: {$ref: '#/definitions/ObjectId'}
+      title: {type: string}
+      subtitle: {type: string}
+      body: {type: string}
+      examples:
+        type: array
+        items: {$ref: '#/definitions/Example'}
+      extras:
+        type: array
+        items: {$ref: '#/definitions/Extra'}
+  Example:
+    type: object
+    required:
+      - _id
+      - title
+      - body
+    properties:
+      _id: {$ref: '#/definitions/ObjectId'}
+      title: {type: string}
+      subtitle: {type: string}
+      body: {type: string}
+  Extra:
+    type: object
+    required:
+      - _id
+      - title
+      - body
+    properties:
+      _id: {$ref: '#/definitions/ObjectId'}
+      title: {type: string}
+      subtitle: {type: string}
+      body: {type: string}
+  Comment:
+    type: object
+    required:
+      - unit
+      - user
+      - value
+    properties:
+      unit: {$ref: '#/definitions/ObjectId'}
+      user: {$ref: '#/definitions/ObjectId'}
+      value: {type: string}
 parameters:
   _id:
     name: _id
